@@ -12,6 +12,7 @@ Version 1.0-dev
 - added methods setUp and tearDown to TestCase which are called before/after each test method
 - version of My Tester and PHP is shown at start now
 - BC break: TestCase::getJobs() now return array of Job
+- first parameter of Runner::addJob() can be instance of Job now
 
 Version 0.9.4c
 - fixed assertion same
